--- a/_config.yml
+++ b/_config.yml
@@ -9,27 +9,19 @@
 # theme settings
 #theme: "lone-wolf-theme"
 remote_theme: "manid2/lone-wolf-theme"
-bootswatch_theme: "united" # cerulean, spacelab, united
+bootswatch_theme: "united" 
 
 # site settings, follows the order used in jekyll-seo-tag plugin
 lang: "en_US"
-title: "Peninsula Democratic Socialists of America"
-description: "Homepage for Peninsula DSA"
-url: # site url e.g. "https://manid2.github.io"
-baseurl: "" # the subpath of your site, e.g. "/blog"
-author: mani_d2
-twitter:
-  username: mani_d2 # should be site's username
+title: "Northwest Arkansas Democratic Socialists of America"
+description: "Homepage for Northwest Arkansas DSA"
+url: https://dsanwa.org
+author: NWA DSA
+twitter: 
+  username: DSA_NWA
   card: summary
 logo: assets/images/smalllogo.png # PNG is SEO friendly
-# use below when there are social links for site
-#social:
-#  name: Mani Kumar
-#  links:
-#    - https://twitter.com/mani_d2
-#    - https://www.linkedin.com/in/manid2/
-#    - https://github.com/manid2
-# site verifications,
+
 webmaster_verifications:
   google: # 1234
   bing: # 1234
