--- a/_data/blog.yml
+++ b/_data/blog.yml
@@ -1,18 +1,18 @@
 # blog authors
 authors:
-  - name: "Peninsula DSA"
+  - name: "Northwest Arkansas DSA"
     headline: # byline? 
     avatar: #"awesome_author.svg" # display_picture.jpg
     follow:
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook"
-      url: "https://www.facebook.com/peninsulaDSA/"
+      url: "https://www.facebook.com/dsaofnwa"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter"
-      url: "https://twitter.com/DSA_Peninsula"
+      url: "https://x.com/DSA_NWA"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://www.instagram.com/peninsuladsa/"
+      url: "https://www.instagram.com/nwadsa/"
 
 # blog post share links
 share:
