Fixed header again.

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,10 +1,16 @@
 # header links
 header:
+  - title: "About"
+    url: "/about/"
+    description: "About the NWA-DSA"
+  - title: "Working Groups"
+    url: "/working-groups/"
+    description: "Working Groups of the Chapter"
   - title: "Statements"
-    url: "/blog/"
+    url: "/statements/"
     description: "Link to Northwest Arkasas DSA's Chapter Statements"
-  - title: "Get Involved"
-    url: "/get-involved/"
+  - title: "Join DSA"
+    url: "/join/"
     description: "Check out what Northwest Arkasas DSA is working on. Join DSA!"
   - title: "Events Calendar"
     url: "/calendar/"
