Final header design

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -16,6 +16,11 @@ header:
     url: "/calendar/"
     description: "Chapter Events Calendar"
 
+join:
+  - title: "Join"
+    url: "https://act.dsausa.org/donate/membership/"
+    description: "Join DSA!"
+
 # footer links
 footer:
   - owner: "Northwest Arkasas DSA"
