--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -3,6 +3,15 @@ header:
   - title: "About"
     url: "/about/"
     description: "About the NWA-DSA"
+  - title: Services
+    dropdown: true
+      sublinks:
+    - title: Service 1
+      url: "/service1/"
+    - title: Service 2
+      url: "/service2/"
+    - title: Service 3
+      url: "/service3/"
   - title: "Working Groups"
     url: "/working-groups/"
     description: "Working Groups of the Chapter"
@@ -23,7 +32,7 @@ join:
 
 # footer links
 footer:
-  - owner: "Northwest Arkasas DSA"
+  - owner: "Northwest Arkansas DSA"
     url: # link if any
     description: # tool tip for your url
     bio: "This is the Northwest Arkansas chapter of the Democratic Socialists of America" # short bio
