Added pages and changed logo

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author: NWA DSA
 twitter: 
   username: DSA_NWA
   card: summary
-logo: assets/images/smalllogo.png # PNG is SEO friendly
+logo: assets/images/NWA_DSA/Logo_1k_pix/SVG/Logo-color-small.svg # PNG is SEO friendly
 
 webmaster_verifications:
   google: # 1234
