--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -3,17 +3,14 @@ header:
   - title: "About"
     url: "/about/"
     description: "About the NWA-DSA"
-  - title: Services
-    sub_menu:
-    - title: Service 1
-      url: "/service1/"
-    - title: Service 2
-      url: "/service2/"
-    - title: Service 3
-      url: "/service3/"
   - title: "Working Groups"
     url: "/working-groups/"
     description: "Working Groups of the Chapter"
+    sub_menu:
+    - title: Gaza Solidarity
+      url: "/gaza-solidarity/"
+    - title: Electoral Working Group
+      url: "/electoral/"
   - title: "Statements"
     url: "/statements/"
     description: "Link to Northwest Arkasas DSA's Chapter Statements"
