--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -43,16 +43,16 @@ footer:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       url: "https://www.instagram.com/nwadsa/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/dsa-ntc"
     - label: "Email"
       icon: "fa fa-envelope"
       url: "mailto:nwademsoc@gmail.com"
-  - feed:
-    - label: "Sitemap"
+  - ardsa:
+    - label: "Central Arkansas DSA"
       icon: "fas fa-sitemap"
       url: "/sitemap.xml"
-    - label: "RSS"
+    - label: "Fort Smith DSA"
+      icon: "fas fa-fw fa-rss-square"
+      url: "/feed.xml"
+    - label: "Northwest Arkansas DSA"
       icon: "fas fa-fw fa-rss-square"
       url: "/feed.xml"
