--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -49,10 +49,10 @@ footer:
   - ardsa:
     - label: "Central Arkansas DSA"
       icon: "fas fa-sitemap"
-      url: "/sitemap.xml"
+      url: "https://centralarkansasdsa.org/"
     - label: "Fort Smith DSA"
       icon: "fas fa-fw fa-rss-square"
-      url: "/feed.xml"
-    - label: "Northwest Arkansas DSA"
+      url: "https://www.facebook.com/fortsmithdsa/"
+    - label: "Northeast Arkansas DSA"
       icon: "fas fa-fw fa-rss-square"
-      url: "/feed.xml"
+      url: "https://www.facebook.com/neadsa"
